--- a/global.css
+++ b/global.css
@@ -1,15 +1,20 @@
-:root {
-    background: #EBEEF5
-    ;
-  }
-body,
-body * {
-    margin: 0;
-    padding: 0;
-    vertical-align: top;
-    box-sizing: border-box;
+/* colors */
+:root{
+    --main-color: #ebeef5;
+    --secondary-color: #02577a;
+    --grey-color: #c4c4c4;
+    --nav-bg-color: #F7F6FF;
+    --white-color: #fff;
 }
 
+/* reset */
 body {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: var(--main-color);
+    margin: 0;
+    font-family: 'Montserrat', sans-serif;
+  }
+
+  a{
+    text-decoration: none;
+    color: inherit;
 }
