--- a/styles/home.css
+++ b/styles/home.css
@@ -1,33 +1,44 @@
 @import '../global.css';
 @import '../styles/layout.css';
 
-.home-position{
-    padding: 0;
-    margin: 0;
-    position: absolute;
-    left: 55px;
-}
 
 .morning {
-width: 341px;
-font-family: 'Montserrat';
-font-style: normal;
-font-weight: 500;
-font-size: 36px;
-line-height: 44px;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 25px;
 
 color: #000000;
 }
-.img-pc {
-    max-width: 100%;
+
+    
+.image-home{
+object-fit: cover;
+height: 30vh;
 }
+
+@media (min-width: 575px) {
+    .image-home{
+        height: 40vh;
+    }
+
+    @media (min-width: 767px) {
+        .image-home{
+            height: 45vh;
+        }
+        @media (min-width: 991px) {
+            .image-home{
+                height: 50vh;
+            }
+        }
 .first-solve {
-    font-family: 'Montserrat';
+font-family: 'Montserrat';
 font-style: normal;
 font-weight: 500;
 font-size: 16px;
 line-height: 20px;
-text-align: center;
 color: #000000;
-padding-top: 50px;
+text-align: right;
+margin-top: 10px;
 }
